force-app/main/default/objects/General_Setup__c/General_Setup__c.object-meta.xml
<CustomObject>
    <label>General Setup</label>
    <nameField>
        <displayFormat>GS-{0000}</displayFormat>
        <label>General Setup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>