force-app/main/default/objects/General_Setup__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this General Setup configuration is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>