force-app/main/default/objects/General_Setup__c/fields/Lead_Duplication_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Duplication_Type__c</fullName>
    <label>Lead Duplication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Only</fullName>
            </value>
            <value>
                <fullName>Mobile with Project</fullName>
            </value>
            <value>
                <fullName>Mobile with Project &amp; Email with Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>