force-app/main/default/objects/General_Setup__c/fields/Push_To_Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Push_To_Sales_Type__c</fullName>
    <label>Push To Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automation /On Site-Visit Creation</fullName>
            </value>
            <value>
                <fullName>Automation /On Site-Visit Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>